adds support for static and stylesheets

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -10,5 +10,7 @@
         <!-- Materialize Icons -->
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
         
+        <!-- Local CSS -->
+        <link rel="stylesheet" href="/css/style.css">
     <title>Javis</title>
 </head>
