--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
-    <%- include('../partials/head') %>
+    <%- include('./partials/head') %>
 <body>
-    <%- include('../partials/footer') %>
+    <%- include('./partials/nav') %>
+    <main></main>
+    <%- include('./partials/footer') %>
 </body>
 </html>
