--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -12,5 +12,6 @@
         
         <!-- Local CSS -->
         <link rel="stylesheet" href="/css/style.css">
-    <title>Javis</title>
+        
+    <title><%= title %></title>
 </head>
